0.12.0.AP (Pre-Release):
-----------------------
- Misc Improvements to CSR Configuration Options
- Misc Improvements to Limit Memory Leaks
- Renames "force_trim" Config Option as "trim_force"
- Fixes Boot Loading Screen Interface on all Units
  * Allows Boot Loading Screen such as the Mac Stage 1 Loading Screen to display correctly
  * This had been unknowing fixed on MacPro5,1 units earlier and this is now extended to all units
  * Hence, 'OsxAptioFix' drivers are no longer required on such units and actively discouraged
- Fixes Coverage Gap in GOP Reinstallation from Random Access Memory
  * GOP was previously only reinstalled when at least one driver was loaded
- Adds 'SupplyAPFS' Feature
  * This eliminates the need for manually adding APFS drivers when APFS is not supported
- Adds 'SuppressVerboseAPFS' Feature
  * This removes the scrolling loading text that appears when using apfs drivers
  * Provided as a separate item as its action may impact other text output
- Adds 'AllowDuplicates' Feature
  * This allows scanning of partitions with duplicate filesystem UUIDs if required
- Fixes Permitted Qemu Memory Leak Bug
  * A permitted memory leak supposed to be limited to Qemu had been applied to all users
  * Additionally, the scope was larger than required
  * This bug appeared in v0.12.0.AM


0.12.0.AN (04 Jan 2021):
-----------------------
- Adds 'EXT4_FEATURE_INCOMPAT_ENCRYPT' Support to Ext4 Driver
- Maps deprecated 'HandleProtocol' calls to 'OpenProtocol'
- Drops ineffective attempt to detect timezones
- Fixes issue with disappearing Mouse on x64 Arch
- Fixes Bogus Bootable Windows BIOS Instances
- Changes default config filename to config.conf
  * Retains support for refind.conf
- Loads 'MemoryFix' driver on OpenCore Boots if required and available
  * Enables the Stage 1 Loading Screen on some Classic Macs
- Fixes ESP detection for saving screenshots
  * ESP detection may have sometimes returned 'true' on other locations