@@ -1,8 +1,9 @@
 0.12.0.AP (Pre-Release):
 -----------------------
+- Fixes Default Legacy UEFI Scan Types
 - Misc Improvements to CSR Configuration Options
 - Misc Improvements to Limit Memory Leaks
-- Renames "force_trim" Config Option as "trim_force"
+- Renames "force_trim" Config Option to "trim_force"
 - Fixes Boot Loading Screen Interface on all Units
   * Allows Boot Loading Screen such as the Mac Stage 1 Loading Screen to display correctly
   * This had been unknowing fixed on MacPro5,1 units earlier and this is now extended to all units
